--- a/console/package.json
+++ b/console/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@headlessui/react": "^2.2.9",
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.6",
@@ -22,6 +23,7 @@
     "eventemitter3": "^5.0.1",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "react": "^19.1.1",
     "react-datepicker": "^9.1.0",
