chore(docker): update Docker configurations for improved service connectivity
- Added `extra_hosts` configuration to multiple services in the `docker-compose.dev.yml` file to enable communication with the host machine.
- Updated Dockerfile base images across various services to use `golang:1.24.4-alpine`, enhancing consistency and ensuring compatibility with the latest Go features.
- Removed unnecessary package updates in Dockerfiles, streamlining the build process while maintaining essential dependencies.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -822,7 +822,7 @@ services:
     container_name: NFX-Identity-Console-Prod
     build:
       context: .
-      dockerfile: inputs/console/api/Dockerfile
+      dockerfile: console/Dockerfile
     restart: always
     expose:
       - "80"
