--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -16,6 +16,8 @@ services:
       - "10189:8080" # Traefik Dashboard
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     networks:
       - nfx-identity
     restart: unless-stopped
@@ -76,6 +78,8 @@ services:
     depends_on:
       reverse-proxy:
         condition: service_started
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     networks:
       - nfx-identity
 
@@ -135,6 +139,8 @@ services:
     depends_on:
       reverse-proxy:
         condition: service_started
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     networks:
       - nfx-identity
 
@@ -194,6 +200,8 @@ services:
     depends_on:
       reverse-proxy:
         condition: service_started
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     networks:
       - nfx-identity
 
@@ -253,6 +261,8 @@ services:
     depends_on:
       reverse-proxy:
         condition: service_started
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     networks:
       - nfx-identity
 
@@ -312,6 +322,8 @@ services:
     depends_on:
       reverse-proxy:
         condition: service_started
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     networks:
       - nfx-identity
 
@@ -371,6 +383,8 @@ services:
     depends_on:
       reverse-proxy:
         condition: service_started
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     networks:
       - nfx-identity
 
@@ -430,6 +444,8 @@ services:
     depends_on:
       reverse-proxy:
         condition: service_started
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     networks:
       - nfx-identity
 
@@ -489,6 +505,8 @@ services:
     depends_on:
       reverse-proxy:
         condition: service_started
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     networks:
       - nfx-identity
 
